--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -10,6 +10,8 @@
 
 
 
+
+
 <div class="table-responsive mt-2">
     <table class="table table-striped table-sm">
         <thead>
@@ -23,7 +25,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let reservering of (reserveringen | async)">
-                <td>{{reservering.resid}}</td>
+                <td>activiteit</td>
                 <td>planning.datum</td>
                 <td>{{reservering.emailGast}}</td>
                 <td>{{reservering.aantalPersonen}}</td>
