--- a/frontend/src/app/shared/components/form-activiteit/form-activiteit.component.html
+++ b/frontend/src/app/shared/components/form-activiteit/form-activiteit.component.html
@@ -47,15 +47,7 @@
                 Geef een korte beschrijving van de activiteit.
             </small>
         </div>
-
-
-
-
-
-
-
-
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="inputDateFrom">Datum activiteit</label>
             <div class="form-group">
                 <div
@@ -74,15 +66,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
         <div class="form-group">
             <label>Capaciteit</label>
             <input
@@ -112,7 +95,7 @@
             >
                 Prijs per persoon.
             </small>
-        </div>
+        </div> -->
         <div class="form-group">
             <label>Foto</label>
             <input
