--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -22,7 +22,8 @@
           <ngb-timepicker formControlName="aanvangstijd" [minuteStep]="15"></ngb-timepicker>
         </div>
       </div>
-      <div><small [class.d-none]="!beschikbaar || aanvangsdatum?.invalid"><i>Er is op dit tijdstip nog plaats voor {{beschikbaar}}
+      <div><small [class.d-none]="!beschikbaar || aanvangsdatum?.invalid"><i>Er is op dit tijdstip nog plaats voor
+            {{beschikbaar}}
             personen</i></small></div>
       <div><small class="text-danger" [class.d-none]="aanvangsdatum?.valid || aanvangsdatum?.untouched">Voer een geldige
           datum in</small></div>
@@ -32,7 +33,7 @@
       <input type="number" class="form-control" formControlName="personen"
         [class.is-invalid]="personen?.invalid && personen?.touched" />
       <small class="text-danger" [class.d-none]="personen?.valid || personen?.untouched">minimaal 1 en maximaal
-        40</small>
+        {{beschikbaar}}</small>
     </div>
     <div class="form-group">
       <label>Naam</label>
