--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -12,6 +12,17 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
 <div class="table-responsive mt-2">
     <table class="table table-striped table-sm">
         <thead>
@@ -25,8 +36,10 @@
         </thead>
         <tbody>
             <tr *ngFor="let reservering of (reserveringen | async)">
-                <td>activiteit</td>
-                <td>planning.datum</td>
+                <td>
+                    {{reservering.planning.activiteit.naam}}
+                </td>
+                <td>{{reservering.planning.actdate}}</td>
                 <td>{{reservering.emailGast}}</td>
                 <td>{{reservering.aantalPersonen}}</td>
                 <td class="text-right">
