--- a/frontend/src/app/managementportal/components/kamers/kamers.component.scss
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.scss
@@ -15,7 +15,7 @@
 }
 .room-bucket {
   padding: 20px;
-  height: 400px;
+ // height: 400px;
   width: 400px;
   //position: relative;
   //left:500px;
