--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -20,9 +20,9 @@
         <tbody>
             <tr *ngFor="let activiteitplanning of (activiteitenPlanning | async)">
                 <td>
-                    {{ activiteitplanning.activiteit.naam }}
+                    Naam:{{ activiteitplanning.activiteit.naam }}
                 </td>
-                <td>{{ activiteitplanning.actdate }}</td>
+                <td>Datum:{{ activiteitplanning.actdate }}</td>
                 <td>
                     {{ activiteitplanning.actprijs | currency: "EUR" }}
                 </td>
