--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -6,23 +6,6 @@
         Nieuwe Reservering maken
     </button>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="table-responsive mt-2">
     <table class="table table-striped table-sm">
         <thead>
@@ -37,10 +20,14 @@
         <tbody>
             <tr *ngFor="let reservering of (reserveringen | async)">
                 <td>
-                    {{reservering.planning.activiteit.naam}}
+                    <!-- {{reservering.planning.activiteit.naam}} -->
                 </td>
-                <td>{{reservering.planning.actdate}}</td>
-                <td>{{reservering.emailGast}}</td>
+                <td>
+                    <!-- {{reservering.planning.actdate}} -->
+                </td>
+                <td>
+                    {{reservering.emailGast}}/{{reservering.phoneGast}}
+                </td>
                 <td>{{reservering.aantalPersonen}}</td>
                 <td class="text-right">
                     <i
