--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -12,7 +12,7 @@
         <div class="col">
           <div class="input-group">
             <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="aanvangsdatum" ngbDatepicker
-              #d="ngbDatepicker" ngbAutofocus [minDate]="minDate">
+              #d="ngbDatepicker" ngbAutofocus [minDate]="minDate" [maxDate]="maxDate">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary far fa-calendar-alt" (click)="d.toggle()" type="button"></button>
             </div>
