s toegevoegd aan openingStijden.

--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -63,7 +63,7 @@
         <small
           class="text-danger"
           [class.d-none]="aanvangstijd?.valid"
-          >De openingstijden van de keuken zijn van 13:00 tot 21:00. Selecteer a.u.b. een tijd die binnen deze openingtijden valt.</small
+          >De openingstijden van de keuken zijn van 13:00 tot 21:00. Selecteer a.u.b. een tijd die binnen deze openingstijden valt.</small
         >
       </div>
     </div>
