--- a/frontend/src/app/managementportal/managementportal.component.html
+++ b/frontend/src/app/managementportal/managementportal.component.html
@@ -9,7 +9,7 @@
         <li class="nav-item text-nowrap">
             <a
                 class="nav-link"
-                [routerLink]="['/login']"
+                (click)="logout()"
             >
                 Sign out
             </a>
