--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
@@ -1,5 +1,5 @@
 <div>
-  <!--pre>{{kamerreserveringen | json}}</pre-->
+  <!-- <pre>{{kamerreserveringen | async | json}}</pre>-->
   <br />
 
   <div class="row">
