--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
@@ -1,5 +1,5 @@
-<!--<pre>{{kamerreserveringen | json}}</pre> -->
-{{ resetInitialValues() }}
+<!-- <pre>{{kamerreserveringen$ | async | json}}</pre> -->
+ <!--<pre>{{booking | json}}</pre>-->
 <br/>
 <div class="row">
   <div class="col-10 d-flex text-sm-center">
@@ -21,7 +21,7 @@
 </div>
 <br/>
 
-<form [formGroup]="kamerreserveringdetailsormgroup" >
+<form [formGroup]="kamerreserveringdetailsormgroup">
   <div class="container-fluid">
     <div>
       <div class="row">
@@ -38,7 +38,7 @@
                 <label>Voornaam</label>
                 <input type="text" class="form-control" formControlName="voornaam"
                        [class.is-invalid]="kamerreserveringdetailsormgroup.controls.voornaam.invalid && kamerreserveringdetailsormgroup.controls.voornaam.touched"
-                       ngbAutofocus/>
+                       />
                 <small class="text-danger"
                        [class.d-none]="kamerreserveringdetailsormgroup.controls.voornaam.valid || kamerreserveringdetailsormgroup.controls.voornaam.untouched">
                   Vereist
@@ -135,21 +135,32 @@
             <div class="container, form-row">
               <div class="form-group col-sm-1">
               </div>
-              <div class="form-group col-sm-6">
+              <div class="form-group col-sm-5">
                 <div class="custom-control custom-switch">
                   <br/>
-                  <input type="checkbox" class="custom-control-input" id="inchecken">
+                  <input type="checkbox" class="custom-control-input" id="inchecken"  [(ngModel)]="inchecken" [ngModelOptions]="{standalone: true}" [disabled]="inchecken">
                   <label class="custom-control-label" for="inchecken"> Inchecken </label>
                 </div>
               </div>
+              <div class="form-group col-sm-5">
+                <div *ngIf="inchecken">
+                  <br/>
+                  <div>op: {{ kamerreserveringdetailsormgroup.value.inchecken || todayDate}}</div>
+                </div>
+              </div>
             </div>
             <div class="container, form-row">
               <div class="form-group col-sm-1">
               </div>
-              <div class="form-group col-sm-6">
+              <div class="form-group col-sm-5">
                 <div class="custom-control custom-switch">
-                  <input type="checkbox" class="custom-control-input" id="uitchecken">
+                  <input type="checkbox" class="custom-control-input" id="uitchecken" [(ngModel)]="uitchecken" [ngModelOptions]="{standalone: true}" [disabled]="uitchecken">
                   <label class="custom-control-label" for="uitchecken"> Uitchecken </label>
+                </div>
+              </div>
+              <div class="form-group col-sm-5">
+                <div *ngIf="uitchecken">
+                  <div>op: {{kamerreserveringdetailsormgroup.value.uitchecken ||todayDate}}</div>
                 </div>
               </div>
             </div>
@@ -157,14 +168,19 @@
               <div class="form-group col-sm-1">
               </div>
               <div class="form-group col-sm-6">
-                <label>Identiteitsgegevens</label>
-                <input type="text" class="form-control" formControlName="identiteitsid"
-                       [class.is-invalid]="kamerreserveringdetailsormgroup.controls.identiteitsid.invalid && kamerreserveringdetailsormgroup.controls.identiteitsid.touched"
-                       ngbAutofocus/>
-                <small class="text-danger"
-                       [class.d-none]="kamerreserveringdetailsormgroup.controls.identiteitsid.valid || kamerreserveringdetailsormgroup.controls.identiteitsid.untouched">
-                  Vereist
-                </small>
+                <div *ngIf="!inchecken">
+                  <br />
+                  <br />
+                  <br />
+                </div>
+                <div *ngIf="inchecken">
+                  <label>Identiteitsgegevens</label>
+                  <input type="text" class="form-control" formControlName="identiteitsid"
+                         [class.is-invalid]="kamerreserveringdetailsormgroup.controls.identiteitsid.invalid && kamerreserveringdetailsormgroup.controls.identiteitsid.touched" ngbAutofocus/>
+                  <small class="text-danger"
+                         [class.d-none]="kamerreserveringdetailsormgroup.controls.identiteitsid.valid || kamerreserveringdetailsormgroup.controls.identiteitsid.untouched"> Vereist
+                  </small>
+                </div>
               </div>
             </div>
           </div>
@@ -218,8 +234,8 @@
               <div class="form-group col-sm-8">
                 <br/>
                 Voor de periode:
-            <!--    <h6>{{resevering.datumvan}} tot {{resevering.datumtot}} </h6>
-                Aantal nachten: <h6>{{calculateNumberofDays(resevering.datumvan, resevering.datumtot)}} nacht(en)</h6>-->
+                 <h6>{{datumvan}} tot {{datumtot}} </h6>
+                  Aantal nachten: <h6>{{numberOfDays}} nacht(en)</h6>
                 heeft u de volgende kamer(s) geboekt:
               </div>
             </div>
@@ -233,18 +249,16 @@
                   <div class="col-2 text-info">Prijs per nacht</div>
                   <div class="col-2"></div>
                 </div>
-                <div *ngFor="let boeking of (kamerreserveringen | async);" class="row">
+                <div *ngFor="let boeking of (kamerreserveringen$ | async);" class="row">
                   <div class="col-8">{{boeking.kamernaam}}</div>
                   <div class="col-2">{{boeking.prijs | currency: "EUR" }}</div>
-                <!--  <div class="col-2"
-                       hidden>{{multiply(calculateNumberofDays(resevering.datumvan, resevering.datumtot), boeking.prijs) }} </div>-->
                 </div>
                 <hr class="bg-dark">
                 <div class="row">
-                  <!--<div class="col-8 text-danger">Totale prijs
-                    ({{calculateNumberofDays(resevering.datumvan, resevering.datumtot)}} nacht(en))
-                  </div> -->
-                  <div class="col-2 text-danger">{{sumAll(storagePrice) | currency: "EUR" }} </div>
+                  <div class="col-8 text-danger">Totale prijs voor
+                    ({{numberOfDays}} nacht(en))
+                  </div>
+                  <div class="col-2 text-danger">{{totalPrice | currency: "EUR" }} </div>
                 </div>
                 <hr class="bg-dark">
               </div>
