--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
@@ -6,10 +6,10 @@
     <button type="button" class="btn btn-outline-primary btn-sm" (click)="backToOverview(); resetInitialValues()">
       Terug naar het overzicht
     </button>
-    <button type="button" class="btn btn-outline-primary btn-sm" (click)="loadHistoriesResevering()">
+    <button type="button" class="btn btn-outline-primary btn-sm" (click)="openBookingPrintingForm()">
       Factuur printen
     </button>
-    <button type="button" class="btn btn-outline-primary btn-sm" (click)="loadCurrentResevering()">
+    <button type="button" class="btn btn-outline-primary btn-sm" (click)="openBookingEmailForm()">
       Factuur e-mailen
     </button>
   </div>
