--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-email-kamerresevering/form-email-kamerresevering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-email-kamerresevering/form-email-kamerresevering.component.html
@@ -1,3 +1,129 @@
-<p>
-  form-email-kamerresevering works!
-</p>
+<div class="modal-header">
+  <h4 class="modal-title" id="modal-basic-title">Factuur per e-mail versturen</h4>
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<br>
+<div class="row">
+  <div class="col-sm-1">
+  </div>
+  <div class="col-sm-11">
+    Onderstaande factuur wordt als PDF verstuurd aan <b>{{voornaam}} {{achternaam}}</b> hiervoor wordt onderstaand e-mailadres gebruikt:<br>
+    <br>
+    <b>{{emailadres}}</b><br>
+    <br>
+    Weet u dit zeker?
+  </div>
+</div>
+<hr class="bg-dark">
+<div class="row">
+  <div class="col-sm-6 text-right">
+    <button type="button" class="btn-sm btn-danger" (click)="activeModal.dismiss('cancel')">Nee</button>
+  </div>
+    <div class="col-sm-6 text-left">
+    <button type="button" class="btn-sm btn-success" (click)="activeModal.dismiss('cancel')">Ja</button>
+  </div>
+</div>
+<hr class="bg-dark">
+<div id="print-section">
+  <div class="container-fluid">
+    <br/>
+    <div class="row">
+      <div class="col-sm-2">
+        <img class="mr-md-3" src="http://localhost:4200/assets/img/logo-64.png" alt="Logo">
+      </div>
+      <div class="col-sm-10">
+        <h1 class="my-0 mr-md-auto font-weight-normal brush">Molveno Lake Resort</h1>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-sm-8">
+      </div>
+      <div class="col-sm-4">
+        Molveno Lake Resort<br>
+        Galgspanweg 8<br>
+        5703 Seon<br>
+        info@molveno-lake-resort.se<br>
+      </div>
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="col-sm-1">
+            </div>
+            <div class="col-sm-5">
+              {{voornaam}} {{achternaam}}<br>
+              {{straat}} {{huisnummer}}<br>
+              {{postcode}} {{woonplaats}}<br>
+              {{land}}
+            </div>
+            <div class="col-sm-12 text-right">
+              Factuurdatum: {{todayDate}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br/>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card">
+          <div class="card-header">
+            Reseveringsnummer: {{reserveringsnummer}}
+          </div>
+          <div class="container, form-row">
+            <div class="col-sm-1">
+            </div>
+            <div class="col-sm-8">
+              <br/>
+              Voor de periode:
+              <h6>{{datumvan}} tot {{datumtot}} </h6>
+              Aantal nachten: <h6>{{numberOfDays}} nacht(en)</h6>
+              heeft u de volgende kamer(s) geboekt:
+            </div>
+          </div>
+          <hr class="bg-dark">
+          <div class="container, form-row">
+            <div class="col-sm-1">
+            </div>
+            <div class="col-sm-9">
+              <div class="row">
+                <div class="col-8 text-info">Kamer</div>
+                <div class="col-4 text-info">Prijs per nacht</div>
+              </div>
+              <div *ngFor="let boeking of kamers;" class="row">
+                <div class="col-8">{{boeking.kamernaam}}</div>
+                <div class="col-4">{{boeking.prijs | currency: "EUR" }}</div>
+              </div>
+              <hr class="bg-dark">
+              <div class="row">
+                <div class="col-8 text-danger">Totale prijs voor
+                  ({{numberOfDays}} nacht(en))
+                </div>
+                <div class="col-4 text-danger">{{totalPrice | currency: "EUR" }} </div>
+              </div>
+              <hr class="bg-dark">
+            </div>
+          </div>
+          <hr class="bg-dark">
+          <br/>
+          <br/>
+        </div>
+        <br/>
+        <br/>
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            BTW Nummer: SE 12345678912 - IBAN NL 99 ABNB 0123 456 78
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
