Unable to make reservation

--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -29,6 +29,12 @@
                 <td>{{ activiteitplanning.actcapaciteit }}</td>
                 <td class="text-align: right">
                     <i
+                        class="fas fa-pen-alt mr-2"
+                        placement="top"
+                        ngbTooltip="Reserveren"
+                        (click)="openCreateReserveringModal(activiteitplanning)"
+                    ></i>
+                    <i
                         class="fas fa-edit mr-2"
                         placement="top"
                         ngbTooltip="Wijzigen"
