--- a/frontend/src/app/shared/components/form-activiteit-res/form-activiteit-res.component.html
+++ b/frontend/src/app/shared/components/form-activiteit-res/form-activiteit-res.component.html
@@ -67,6 +67,21 @@
             </small>
         </div>
         <div class="form-group">
+            <label>Telefoon</label>
+            <input
+                type="string"
+                class="form-control"
+                formControlName="phoneGast"
+                [class.is-invalid]="phoneGast?.invalid && phoneGast?.touched"
+            >
+            <small
+                class="text-danger"
+                [class.d-none]="phoneGast?.valid || phoneGast?.untouched"
+            >
+                Telefoonnummer invullen
+            </small>
+        </div>
+        <div class="form-group">
             <label>Aantal Personen</label>
             <input
                 type="number"
