fixed bug with Peter & team

--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let activiteitplanning of (activiteitenPlanning | async)">
+            <tr *ngFor="let activiteitplanning of (activiteitenPlanningen | async)">
                 <td>
                     {{ activiteitplanning.activiteit.naam }}
                 </td>
