--- a/frontend/src/app/shared/components/form-activiteit-maak-reservering/form-activiteit-maak-reservering.component.html
+++ b/frontend/src/app/shared/components/form-activiteit-maak-reservering/form-activiteit-maak-reservering.component.html
@@ -98,8 +98,7 @@
             type="button"
             class="btn btn-success"
             (click)="submitForm()"
-            [disabled]="activiteitResForm.invalid"
-        >
+            [disabled]="activiteitMaakResForm.invalid">
             Save
         </button>
     </div>
